--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>maven-jar-plugin</artifactId>
             <version>3.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.akathist.maven.plugins.launch4j</groupId>
+            <artifactId>launch4j-maven-plugin</artifactId>
+            <version>2.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -200,47 +205,47 @@
 <!--            </plugin>-->
 
 
-<!--            <plugin>-->
-<!--                <groupId>com.akathist.maven.plugins.launch4j</groupId>-->
-<!--                <artifactId>launch4j-maven-plugin</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>l4j-clui</id>-->
-<!--                        <phase>package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>launch4j</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <dontWrapJar>false</dontWrapJar>-->
-<!--                            <headerType>gui</headerType>-->
-<!--                            &lt;!&ndash; ścieżka do pliku JAR &ndash;&gt;-->
-<!--                            <jar>target/Projekt_Java-1.0-SNAPSHOT-spring-boot.jar</jar>-->
-<!--                            &lt;!&ndash; ścieżka do pliku wyjściowego exe&ndash;&gt;-->
-<!--                            <outfile>target/Projekt_Java.exe</outfile>-->
-<!--                            <downloadUrl>https://www.oracle.com/java/technologies/downloads/</downloadUrl>-->
-<!--                            <stayAlive>true</stayAlive>-->
-<!--                            <priority>high</priority><jre>-->
-<!--                            &lt;!&ndash; Zmienne środowiskowe wskazująceinstalację JDK &ndash;&gt;-->
-<!--                            <path>%JAVA_HOME%;%PATH%</path>-->
-<!--                            <bundledJre64Bit>false</bundledJre64Bit>-->
-<!--                            <bundledJreAsFallback>false</bundledJreAsFallback>-->
-<!--                            <minVersion>17</minVersion>-->
-<!--                            <maxVersion>18</maxVersion>-->
-<!--                            <jdkPreference>preferJdk</jdkPreference>-->
-<!--                            <runtimeBits>64/32</runtimeBits>-->
-<!--                        </jre>-->
-<!--                            <splash>-->
-<!--                                &lt;!&ndash; Wymagania zdjęcia które jestwyświetlane podczasuruchamiania aplikacji:24-bitno colorspace information &ndash;&gt;-->
-<!--                                <file>src\main\resources\img\startapp.bmp</file>-->
-<!--                                <waitForWindow>true</waitForWindow>-->
-<!--                                &lt;!&ndash; Czas w sekundach do wyrzuceniawyjątku Timeout&ndash;&gt;-->
-<!--                                <timeout>60</timeout>-->
-<!--                                <timeoutErr>true</timeoutErr>-->
-<!--                            </splash>-->
-<!--                        </configuration>-->
-<!--            </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>l4j-clui</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <dontWrapJar>false</dontWrapJar>
+                            <headerType>gui</headerType>
+                            <!-- ścieżka do pliku JAR -->
+                            <jar>target/Projekt_Java-1.0-SNAPSHOT-spring-boot.jar</jar>
+                            <!-- ścieżka do pliku wyjściowego exe-->
+                            <outfile>target/Projekt_Java.exe</outfile>
+                            <downloadUrl>https://www.oracle.com/java/technologies/downloads/</downloadUrl>
+                            <stayAlive>true</stayAlive>
+                            <priority>high</priority><jre>
+                            <!-- Zmienne środowiskowe wskazująceinstalację JDK -->
+                            <path>%JAVA_HOME%;%PATH%</path>
+                            <bundledJre64Bit>false</bundledJre64Bit>
+                            <bundledJreAsFallback>false</bundledJreAsFallback>
+                            <minVersion>17</minVersion>
+                            <maxVersion>18</maxVersion>
+                            <jdkPreference>preferJdk</jdkPreference>
+                            <runtimeBits>64/32</runtimeBits>
+                        </jre>
+                            <splash>
+                                <!-- Wymagania zdjęcia które jestwyświetlane podczasuruchamiania aplikacji:24-bitno colorspace information -->
+                                <file>src\main\resources\img\startapp.bmp</file>
+                                <waitForWindow>true</waitForWindow>
+                                <!-- Czas w sekundach do wyrzuceniawyjątku Timeout-->
+                                <timeout>60</timeout>
+                                <timeoutErr>true</timeoutErr>
+                            </splash>
+                        </configuration>
+            </execution>
+                </executions>
+            </plugin>
 
             <plugin>
                 <groupId>org.panteleyev</groupId>
